welcome.lessons.welcome.loopwhile.LoopWhile.scala.error
Program:2: error: '(' expected but identifier found.
while estFaceMur==false {
      ^Program:7: error: illegal start of simple expression
	}
        ^